fix: update styles for dark mode & light mode toggle

--- a/src/web/components/App.scss
+++ b/src/web/components/App.scss
@@ -1,59 +1,3 @@
 @import '/node_modules/bootstrap/scss/bootstrap';
-@import '/assets/styles/variables';
 @import '/assets/styles/bootswatch';
 @import '/assets/styles/fonts';
-
-:root {
-  @media (prefers-color-scheme: dark) {
-    --bs-body-color: #fff;
-
-    body {
-      background: $gray-900;
-    }
-  }
-
-  @media (prefers-color-scheme: light) {
-    body {
-      background: $gray-100;
-    }
-  }
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-html,
-body,
-#root {
-  font-family: 'JetBrains Mono-Light', monospace;
-  height: 100%;
-}
-
-p,
-span {
-  color: $red;
-  font-size: small;
-  margin-top: 1em;
-}
-
-button {
-  background: none;
-  border: none;
-  padding: 0;
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
-}
-
-.icon {
-  fill: $red;
-
-  &:hover,
-  &:focus,
-  &:active {
-    fill: $white;
-    cursor: pointer;
-  }
-}
