--- a/src/web/components/Card/Card.scss
+++ b/src/web/components/Card/Card.scss
@@ -9,6 +9,5 @@ div.card {
 
   .card-title {
     width: fit-content;
-    color: $gray-300;
   }
 }
